<resources>
    <string name="app_name" translatable="false">mHealthy</string>
    <string name="authenticate">Authentication</string>
    <string name="token">Token</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="scan_qr">Scan QR code</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="activities">Activities</string>
    <string name="medication">Medication</string>
    <string name="switch_to_caregiver">Switch to caregiver</string>
    <string name="enter_token">Please enter Token</string>
    <string name="nothing_scanned">Nothing was scanned</string>
    <string name="server_unreachable">Server unreachable, try again later</string>
    <string name="loggin_in">Login in progress...</string>
    <string name="patient_list">Patients list</string>
    <string name="dark_mode_desc">Toggle this switch to enable dark mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="pick_lang">Select language</string>
    <string name="pick_lang_desc">Choose your preferred language</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="caregiver_patient_main">Patient: %1$s</string>
    <string name="settings_desc">Menu button</string>
    <string name="logout_dialog">Are you sure you want to logout?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="conf_change_restart">This change requires restarting the application. Do you agree to this?</string>
    <string name="add_med">Add medicine</string>
    <string name="med_name">Medicine name</string>
    <string name="med_dose">Medicine dose</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="edit_med">Edit medicine</string>
    <string name="empty_field">All fields must be filled</string>
    <string name="pending">Operation is being processed, please hold on...</string>
    <string name="med_assigned_patient">%1$s is now assigned to %2$s</string>
    <string name="med_list_patient">My medicines</string>
    <string name="med_list_caregiver">Medicines</string>
    <string name="add_act">Add activity</string>
    <string name="edit_act">Edit activity</string>
    <string name="sel_act">Select wanted activity</string>
    <string name="act_goal">Goal</string>
    <string name="act_list_patient">My activities</string>
    <string name="act_list_caregiver">Activities</string>
    <string name="no_goal">No goal</string>
    <string name="med_modify">%1$s prescription was modified for %2$s</string>
    <string name="med_remove">%1$s prescription was removed for %2$s</string>
    <string name="remove_med">Remove medicine</string>
    <string name="remove_act">Remove activity</string>
    <string name="act_modify">%1$s activity was modified for %2$s</string>
    <string name="act_remove">%1$s activity was removed for %2$s</string>
    <string name="med_add_err">Cannot add this medicine. Is it already defined?</string>
    <string name="act_add_err">Cannot add this activity. Is it already defined?</string>
    <string name="caregiver_area">Caregiver area</string>
    <string name="new_patient_title">New patient</string>
    <string name="new_patient">%1$s has been assigned to you</string>
    <string name="new_caregiver_title">New caregiver</string>
    <string name="new_caregiver">%1$s is your new caregiver, don\'t hesitate to contact him for all future issues!</string>
    <string name="med_taken">I did take my medicine</string>
    <string name="med_taken_notice">Your medication usage details have been recorded!</string>
    <string name="new_patient_hist">%1$s is now your newly assigned patient</string>
    <string name="new_caregiver_hist">%1$s is now your newly assigned caregiver</string>
    <string name="new_med_hist">Medicine is now assigned</string>
    <string name="edit_med_hist">Medicine prescription was modified, new dose is %1$s and time is %2$s</string>
    <string name="remove_med_hist">Medicine is no longer assigned</string>
    <string name="new_act_hist">Activity is now assigned</string>
    <string name="edit_act_hist_goal">Activity was modified, new goal is %1$s and time is %2$s</string>
    <string name="edit_act_hist">Activity was modified, new time is %1$s</string>
    <string name="remove_act_hist">Activity removed</string>
    <string name="med_taken_hist">Medicine was taken on %1$s</string>
    <string name="assigned">Assigned</string>
    <string name="not_assigned">Unassigned</string>
    <string name="ID" translatable="false">ID: %1$s</string>
    <string name="dose">Dose: %1$s</string>
    <string name="history">History</string>
    <string name="act_finished">I did complete the activity</string>
    <string name="goal">Goal: %1$s</string>
    <string name="act_finished_notice">Your activity details have been recorded!</string>
    <string name="continue_dial">Continue</string>
    <string name="cancel_dial">Cancel</string>
    <string name="act_result_title">Activity result</string>
    <string name="act_result">Please input the result of the activity</string>
    <string name="act_finished_hist">Activity finished with result %1$s on %2$s</string>
    <string name="dismiss_alarm">Stop alarm</string>
    <string name="dnd">Please allow Do Not Disturb access for the alarm to work properly</string>
    <string name="show_del">Show unassigned</string>
    <string name="hide_del">Hide unassigned</string>
    <string name="overlay">Please allow overlay permission</string>
    <string name="contact_caregiver">Contact caregiver</string>
    <string name="emergency">Emergency</string>
    <string name="contact_patient">Contact patient</string>
    <string name="show_del_patient">Show unassigned patients</string>
    <string name="hide_del_patient">Hide unassigned patients</string>
    <string name="patient_caregiver_unassigned">Caregiver %1$s has been unassigned</string>
    <string name="you_unassgined">You have been unassigned from taking care of %1$s</string>
    <string name="no_active_caregiver">You currently don\'t have a caregiver</string>
    <string name="assign_hist">Assignment history</string>
    <string name="profile">Profile</string>
    <string name="profile_token">Profile token QR code</string>
    <string name="profile_qr_gen_warn_patient">Warning: To protect your privacy, only caregiver instructions will be sent to your new device.</string>
    <string name="selfcarelog">Use offline selfcare profile</string>
</resources>