<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@null"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:popupTheme="@style/ThemeOverlay.AppCompat"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvActTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="?attr/text_color"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:id="@+id/activity_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Running"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:id="@+id/activity_goal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Goal: No goal"
                        android:textSize="20sp"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:id="@+id/activity_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20:00"
                        android:layout_gravity="center"
                        android:textColor="@color/status_active"
                        android:textSize="25sp"
                        android:background="@drawable/status_background"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                android:backgroundTint="@color/done_color">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnActFinished"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/act_finished"
                    android:textSize="18sp"
                    android:padding="16dp"
                    android:textColor="@android:color/white"
                    app:iconTint="@android:color/white"
                    app:icon="@drawable/ic_activities"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:text="@string/history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/text_color" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:layout_marginBottom="60dp">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_act_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/edit_med"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>